# hegelion

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_README.md  AI_TEST.py  CHANGELOG.md  CLAUDE_CODE_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_GENERATION_GUIDE.md  DEV_NOTES.md  Dockerfile  EXAMPLES_NOTE.md  HANDOVER.md  HEGELION_SPEC.md  LAUNCH_CHECKLIST.md  LICENSE  MCP_COMPLETE_SETUP_GUIDE.md  MCP_SETUP_GUIDE.md  MCP_TEST_SUMMARY.md  POLISH_HANDOFF.md  PROGRESS_REPORT.md  QUICKSTART_500_SAMPLES.md  README.md  README_DATASET_GENERATION.md  README_TRAINING.md  SECURITY.md  STATUS_REPORT.md  agents.md  ai_ml_presentation_strategy_analysis.md  debug_contradictions.py  env.example  hegelion_ai_prompt.txt  hegelion_enhancement_opportunities.md  hegelion_prompts_500.txt  mcp_config.json  nvidia_analysis.py  pyproject.toml  (+2 more)
.claude/agents/: opus-test-agent.md  sonnet-test-agent.md
.claude/commands/: autocoding.md  hegelion.md
.cursor/: agents.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
.internal/: marketplaces.md
benchmarks/: ARCHITECTURE_ANALYSIS.md  BENCHMARK_PROPOSAL.md  CLAUDE_HANDOFF.md  EXISTING_DATA_AUDIT.md  HANDOFF_CONTEXT.md  examples_basic.jsonl  run_mvb.py
benchmarks/results/: EXAMPLE_EVALUATION_P001.md
benchmarks/scripts/: evaluate.py  extract_hegelion_data.py  generate_report.py  generate_responses.py  generate_via_subagents.py  reselect_with_existing.py  select_prompts.py
data/: hegelion_dialectical_500.jsonl
docs/: CLAUDE_DESKTOP_SETUP.md  CLI_REMOVAL_PLAN.md  DEV_NOTES.md  HEGELION_SPEC.md  MCP.md  MODEL_AGNOSTIC.md  PUBLISHING.md  QUICKSTART.md  STATUS_REPORT.md  TRAINING_PROTOCOL.md  USER_GUIDE.md  marketplaces.md  next_steps.md  overview.md  showcase.md
docs/concepts/: architecture.md  dialectical-method.md
docs/development/: CLAUDE_CODE_SETUP.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: agents.md  cli-reference.md  codex-skill.md  mcp-integration.md  mcp_instructions.md  python-api.md
examples/: README.md  README_DEMO.md  ai_creativity_example.md  claude_code_cli.json  consciousness_example.md  demo_glm_api.py  eval_harness.py  gravity_example.md  mock_glm_server.py  record_demo.sh  zero_marginal_cost_example.md
examples/mcp/: README.md  claude_desktop_config.json  claude_desktop_prompt_config.json  cursor_mcp_config.json  inprocess_check.py
extensions/gemini/: README.md  openapi.yaml
extensions/gemini/firebase/: README.md  firebase.json
extensions/gemini/server/: Dockerfile  Procfile  README.md  app.py  env.sample  requirements.txt
hegelion/: __init__.py  backends.py  config.py  core.py  council.py  datasets.py  engine.py  judge.py  logging_utils.py  mcp_server.py  models.py  parsing.py  prompt_dialectic.py  prompt_mcp_server.py  prompts.py  schema.py  search_providers.py  validation.py
hegelion-data/: README.md  claude.md  claude_system_prompt.md
hegelion-data/examples/: glm4_6_examples.jsonl
hegelion-data/scripts/: batch_generate_claude.py  format_manual_dialectic.py  generate_500_samples.py  generate_with_kimi.py  manual_dialectic_template.md
hegelion-mcp-node/: GEMINI.md  README.md  gemini-extension.json  package-lock.json  package.json  security_test.ts  verify.ts
hegelion-mcp-node/src/: index.ts
hegelion-web/: index.html  package-lock.json  package.json  wrangler.toml
hegelion-web/src/: App.tsx  data.ts  index.css
hegelion-web/src/components/: Footer.tsx  Header.tsx  ProcessVisualizer.tsx  ResultCard.tsx  ResultModal.tsx
hegelion/core/: __init__.py  agent.py  autocoding_state.py  backends.py  cache.py  config.py  constants.py  core.py  engine.py  models.py  personas.py  prompt_autocoding.py  prompt_dialectic.py  schema.py  validation.py
hegelion/examples/: printing_press_example.md
hegelion/examples_data/: __init__.py  glm4_6_examples.jsonl
hegelion/mcp/: __init__.py  constants.py  progress.py  response.py  server.py  tooling.py  validation.py
hegelion/mcp/handlers/: __init__.py  autocoding.py  dialectic.py
hegelion/scripts/: hegelion_agent_cli.py  hegelion_bench.py  hegelion_cli.py  hegelion_dataset.py  hegelion_eval.py  mcp_setup.py
hegelion/training/: .env.example  AGENT.md  __init__.py  datasets.py  generator.py  mlx_scu_trainer.py  mlx_trainer.py  unsloth_trainer.py
hegelion/training/wrappers/: kimi_cli.py
scripts/: batch_generate_claude.py  clean_dataset.py  convert_for_scu.py  generate_500_samples.py  generate_with_kimi.py  manual_dialectic_template.md  publish_github_packages.sh  publish_pypi.sh  run_benchmark.py  run_hegelion_query.py  setup_mcp.py  validate_hegelian_dataset.py  validate_mcp.py
skills/hegelion/: SKILL.md
skills/hegelion-prompts/: SKILL.md
src/hegelion_server/: __init__.py  config.py  dialectics.py  server.py
src/hegelion_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_agent_cli.py  test_autocoding.py  test_backends.py  test_bench_cli.py  test_cache.py  test_cache_and_validation.py  test_cli.py  test_cli_utils.py  test_config.py  test_config_runtime.py  test_core.py  test_council.py  test_datasets_exports.py  test_dialectics.py  test_dialectics_conflict.py  test_engine_errors.py  test_engine_features.py  test_engine_features_extended.py  test_eval_cli.py  test_google_backend.py  test_hegelion_integration.py  test_judge.py  test_mcp_local.py  test_mcp_response.py  test_mcp_server.py  test_mcp_setup.py  test_mcp_streaming.py  test_mcp_validation.py  test_models.py  test_models_comprehensive.py  test_parsing.py  test_parsing_edge_cases.py  test_prompt_dialectic.py  test_prompt_mcp_server.py  test_response_styles.py  test_search_providers.py  test_streaming.py  test_validation.py  test_validation_extended.py  (+1 more)
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  main.tsx
(+18 files in other folders)
