[project]
name = "hegelion"
version = "0.4.4"
description = "Prompt-driven dialectical reasoning and autocoding for LLMs (thesis -> antithesis -> synthesis)"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Hunter Bown", email = "hunter@shannonlabs.dev" }
]
license = "MIT"
keywords = [
    "ai",
    "llm",
    "reasoning",
    "dialectical",
    "hegelian",
    "mcp",
    "autocoding",
    "prompt",
    "agent",
    "cursor",
    "vscode",
    "copilot",
    "anthropic",
    "openai",
    "claude",
    "gpt",
    "ollama",
    "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "mcp>=1.21.1",
    "anyio>=4.0.0",
    # Phase 2 dependencies
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]

[project.scripts]
hegelion-server = "hegelion.mcp.server:main"
hegelion-setup-mcp = "hegelion.scripts.mcp_setup:main"

[project.urls]
Homepage = "https://github.com/Hmbown/Hegelion"
Repository = "https://github.com/Hmbown/Hegelion"
Documentation = "https://github.com/Hmbown/Hegelion/blob/main/docs/HEGELION_SPEC.md"
"Bug Tracker" = "https://github.com/Hmbown/Hegelion/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "hegelion",
    "hegelion.core",
    "hegelion.mcp",
    "hegelion.mcp.handlers",
    "hegelion.scripts",
    
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:coroutine 'run_dialectic' was never awaited",
    "ignore:coroutine 'run_benchmark' was never awaited",
    "ignore:coroutine 'dialectic' was never awaited",
    "ignore:coroutine 'quickstart' was never awaited",
]

[dependency-groups]
dev = [
    "build==1.3.0",
    "twine==6.2.0",
    "pytest-timeout>=2.3.1",
]

[tool.black]
line-length = 100
extend-exclude = """
(
    hegelion/engine.py
  | .gemini/
)
"""
